messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
  labels:
    app: messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging
  template:
    metadata:
      labels:
        app: messaging
    spec:
      containers:
        - name: web-messaging-app
          image: messaging-app-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
