messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
  labels:
    app: messaging-app
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging
      version: green
  template:
    metadata:
      labels:
        app: messaging
        version: green
    spec:
      containers:
        - name: web-messaging-app
          image: messaging-app-image:green
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
