messaging_app/messaging_app/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: messaging
  ports:
    - protocol: TCP
      port: 80 # Service port
      targetPort: 8000 # Container port
  type: ClusterIP
